--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Cypress CI
+name: Cypress CI Smoke Test
 
 on:
   push:
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Setup Node.js
@@ -21,8 +21,8 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Run Cypress tests
+      - name: Run Cypress CI Smoke Test
         uses: cypress-io/github-action@v6
         with:
           browser: electron
-          config: baseUrl=https://test.mycompany.com
+          spec: cypress/e2e/ci-smoke.cy.js
